<resources>
    <string name="app_name">FindTutor</string>
    <string name="api_key">AIzaSyAYQCFQ7PLPpcJD8i3Fy04WcFiLVfHpw5c</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Daftar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile_form">Lengkapi Profil</string>
    <string name="title_activity_my_profile">Profil Saya</string>
    <string name="title_activity_edit_profile">Edit Profil</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_conf">Konfirmasi Password</string>
    <string name="prompt_fullname">Nama Lengkap</string>
    <string name="prompt_phone">No Handphone</string>
    <string name="prompt_bio">Bio</string>
    <string name="prompt_tutor_location">Lokasi Mengajar</string>
    <string name="prompt_education">Pendidikan</string>
    <string name="label_form_tujuan_bergabung">Tujuan Bergabung</string>
    <string name="label_opt_is_tutor">Sebagai Tutor</string>
    <string name="label_opt_is_student">Sebagai Siswa</string>
    <string name="label_opt_is_both">Kedua-duanya</string>

    <string name="action_pick_selfie">Ambil Selfie</string>
    <string name="action_pick_from_gallery">Dari Galeri</string>
    <string name="action_next">Selanjutnya</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Daftar</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_education">Tambah Riwayat Pendidikan</string>
    <string name="action_edit_education">Edit Riwayat Pendidikan</string>
    <string name="action_cancel">Cancel</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_email_exist">Email sudah terdaftar</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_conf">Konfirmasi password tidak sama</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_required_radio">Harap pilih salah satu pilihan</string>
    <string name="error_complete_form">Lengkapi Form</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_my_session">Sesi Saya</string>
    <string name="menu_find_tutor">Cari Tutor</string>
    <string name="menu_fave_tutor">Tutor Favorit</string>
    <string name="menu_session_history">Riwayat Sesi</string>
    <string name="menu_preferences">Pengaturan</string>
    <string name="menu_help">Bantuan</string>
    <string name="menu_income">Pendapatan</string>
    <string name="menu_availibility">Jadwal Tersedia</string>
    <string name="menu_notifications">Pemberitahuan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="school_department">Jurusan</string>
    <string name="school_name">Nama Sekolah/Institusi Pendidikan</string>
    <string name="school_level">Jenjang Pendidikan</string>
    <string name="select_school_level">Pilih Jenjang Pendidikan</string>
    <string name="school_year_graduate">Tahun Lulus</string>

    <string name="delete_confirmation">Apakah anda yakin?</string>
    <string name="title_activity_edit_account">Edit Akun</string>
    <string name="title_activity_booked_preference">Booked Preference</string>
    <string name="prompt_tutor_subject">Keahlian Mengajar</string>
    <string name="action_select_subject">Pilih Keahlian Mengajar</string>
    <string name="prompt_change_password">Ganti Password</string>
    <string name="prompt_max_travel_distance">Jarak Perjalanan Maksimum</string>
    <string name="prompt_min_price_rate">Tarif Mengajar Minimum</string>
    <string name="set_basic_profile">Atur Profil Dasar</string>
    <string name="set_account">Atur Akun</string>
    <string name="set_tutor_preference">Atur Preferensi Pengajar</string>
    <string name="basic_profile">Profil Dasar</string>
    <string name="account">Pengaturan Akun</string>
    <string name="tutor_preference">Preferensi Pengajar</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="add_time_slot">Tambah Slot Waktu</string>
    <string name="sampai_dengan">s/d</string>
    <string name="label_opt_male">Pria</string>
    <string name="label_opt_female">Wanita</string>
    <string name="prompt_gender">Jenis Kelamin</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid location value</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address Found</string>
    <string name="current_location">Lokasi Saat Ini</string>
    <string name="search_location">Cari Lokasi</string>

    <string-array name="day_arrays">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_search_select_subject">Pilih Subjek</string>
    <string name="title_search_select_location">Pilih Lokasi Pertemuan</string>
    <string name="use_current_location">Gunakan Lokasi Saat Ini</string>
    <string name="title_search_select_date">Tentukan Tanggal</string>
    <string name="title_search_tutor">Cari Tutor</string>
    <string name="menu_search_tutor">Cari Tutor</string>
    <string name="title_search_tutor_result">Hasil Pencarian</string>
    <string name="title_search_select_gender">Preferensi Gender (Opsional)</string>
    <string name="tutor_tab_title_profile">Profil</string>
    <string name="tutor_tab_title_subject">Subjek</string>
    <string name="tutor_tab_title_feedback">Ulasan</string>
    <string name="title_tutor_profile">Profil Tutor</string>
    <string name="title_book_tutor">Booking Tutor</string>
    <string name="session_accepted">Jadwal Sesi</string>
    <string name="session_pending">Permintaan Sesi</string>
    <string name="action_reschedule">Reschedule</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="title_session_accept_confirmation">Konfirmasi Permintaan Sesi</string>
    <string name="action_yes">Ya</string>
    <string name="confirm_message_accept_session">Anda yakin akan menerima permintaan jadwal dari:</string>
    <string name="confirm_message_reject_session">Anda yakin akan menolak permintaan jadwal dari:</string>
    <string name="action_start_session">Mulai Sesi</string>
    <string name="action_cancel_session">Batalkan Sesi</string>
    <string name="empty_data">Tidak ada data</string>
    <string name="confirm_message_start_session">Apakah anda dan tutor telah setuju untuk memulai sesi belajar ?</string>
    <string name="info_session_has_started">Sesi belajar telah dimulai. Saat sesi belajar telah berakhir, harap tap tombol dibawah.</string>
    <string name="action_end_session">Akhiri Sesi</string>
    <string name="title_activity_rate_tutor">Beri Rating Untuk Tutor</string>
    <string name="label_knowledge_of_subject">Penguasaan Materi</string>
    <string name="label_attitude">Sikap</string>
    <string name="label_clarity">Cara Menyampaikan</string>
    <string name="label_helpfulness">Pemberian Solusi</string>
    <string name="action_send">Kirim</string>
    <string name="confirm_message_end_session">Apakah anda dan tutor telah setuju untuk memulai sesi belajar ?</string>
    <string name="label_feedback">Komentar/Review</string>
    <string name="menu_session_n_request"><![CDATA[Jadwal & Permintaan Sesi]]></string>
    <string name="session_rejected_by_tutor">Ditolak oleh tutor</string>
    <string name="session_canceled_by_tutor">Dibatalkan oleh tutor</string>
    <string name="session_canceled_by_student">Dibatalkan oleh siswa</string>
    <string name="session_finished">Telah berakhir</string>
    <string name="title_session_overview">Ringkasan Sesi</string>
    <string name="select_frequency">Pilih Frekuensi</string>
    <string name="title_book_tutor_regular">Book Berkala</string>
    <string name="label_opt_daily">Harian</string>
    <string name="label_opt_weekly">Mingguan</string>
    <string name="tutor_tab_title_availability">Jadwal Mengajar</string>
    <string-array name="book_frequency">
        <item>Harian</item>
        <item>Mingguan</item>
    </string-array>
    <string-array name="day">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>
</resources>
