<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
           android:id="@+id/group_nav_first">
        <item
            android:id="@+id/nav_my_session"
            android:title="@string/menu_my_session"/>
        <item
            android:id="@+id/nav_session_history"
            android:title="@string/menu_session_history"/>
        <item
            android:id="@+id/nav_income"
            android:title="@string/menu_income"/>
        <item
            android:id="@+id/nav_availibility"
            android:title="@string/menu_availibility"/>
    </group>
    <group android:checkableBehavior="single"
           android:id="@+id/group_nav_second">
        <item
            android:id="@+id/nav_preferences"
            android:title="@string/menu_preferences"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help"/>
    </group>
    <group android:checkableBehavior="single"
           android:id="@+id/group_nav_third">
        <item
            android:id="@+id/nav_logout"
            android:title="Logout"/>
    </group>


</menu>
