<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/dialog_content_vmargin"
              android:paddingRight="@dimen/dialog_content_vmargin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/formFieldLayout">
        <TextView
            android:text="@string/school_year_graduate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/formLabel"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/formInputLayout">
            <EditText
                android:id="@+id/input_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"/>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/formFieldLayout">
        <TextView
            android:id="@+id/label_school_level"
            android:text="@string/school_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            style="@style/formLabel"/>
        <Spinner
            android:id="@+id/spinner_school_level"
            android:layout_below="@id/label_school_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:prompt="@string/select_school_level"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/formFieldLayout">
        <TextView
            android:text="@string/school_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/formLabel"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/formInputLayout">
            <EditText
                android:id="@+id/input_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/formFieldLayout">
        <TextView
            android:text="@string/school_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/formLabel"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/formInputLayout">
            <EditText
                android:id="@+id/input_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

</LinearLayout>